--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-web-extension-ui-element",
+  "name": "Tops",
   "description": "A Vue.js web extension",
   "version": null,
   "manifest_version": 2,
