--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "vue-web-extension-ui-element",
-  "version": "1.0.0",
+  "name": "tops",
   "description": "A Vue.js web extension",
   "author": "Hugo Alliaume <kocal@live.fr>",
   "scripts": {
@@ -20,48 +19,32 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "element-ui": "^2.10.1",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "webextension-polyfill": "^0.3.1"
+    "element-ui": "^2.13.2",
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime-corejs3": "^7.4.0",
+    "@types/chrome": "^0.0.74",
     "archiver": "^3.0.0",
-    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.2",
-    "copy-webpack-plugin": "^4.5.3",
+    "babel-plugin-component": "^1.1.1",
+    "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.0.1",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
+    "css-loader": "^3.4.0",
     "ejs": "^2.6.1",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "file-loader": "^1.1.11",
-    "husky": "^2.4.0",
-    "mini-css-extract-plugin": "^0.4.4",
+    "file-loader": "^5.0.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.9.3",
-    "prettier": "^1.17.1",
-    "pretty-quick": "^1.8.0",
     "sass-loader": "^7.1.0",
+    "script-loader": "^0.7.2",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.6.10",
-    "web-ext-types": "^2.1.0",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "^3.3.10",
     "webpack-extension-reloader": "^1.1.0"
   }
 }
