--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,6 +4,8 @@
   "version": null,
   "manifest_version": 2,
   "icons": {
+    "16":"icons/icon16.png",
+    "32":"icons/icon32.png",
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   },
