--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,8 +4,8 @@
   "version": null,
   "manifest_version": 2,
   "icons": {
-    "16":"icons/icon16.png",
-    "32":"icons/icon32.png",
+    "16":"icons/icon_16.png",
+    "32":"icons/icon_32.png",
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   },
@@ -23,7 +23,6 @@
     "chrome_style": true
   },
   "permissions": [
-    "activeTab",
     "*://*.sina.com.cn/*",
     "*://*.weibo.com/*",
     "*://github.com/*'"
