Increase zhihu board and optimized 3nd top in Sina module.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,6 +25,7 @@
   "permissions": [
     "*://*.sina.com.cn/*",
     "*://*.weibo.com/*",
+    "*://*.zhihu.com/*'",
     "*://github.com/*'"
   ]
 }
